[package]
name = "webview_deno"
version = "0.4.1"
authors = ["Elias Sjögreen <eliassjogreen1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.48.0"
webview_rust = { git = "https://github.com/tauri-apps/webview_rust", branch = "dev" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.4"
